--- a/desafio 02 - Inserir Imagens/index.html
+++ b/desafio 02 - Inserir Imagens/index.html
@@ -22,8 +22,9 @@
     <h1>Desafio das Imagens</h1><br>
 
 </br><p>
-        Inserir imagens em HTML é muito simples, tanto no conteúdo quanto lá em cima, como ícone de favoritos! </p>
-<div class="box">   
+        Inserir imagens em HTML é muito simples, tanto no conteúdo quanto lá em cima, como ícone de favoritos! 
+    </p>
+    <div class="box">  
         <img src="file_type_html_icon_130541.png" alt="html"><figcaption>HTML</figcaption>
     </div>
     <div class="box"> 
@@ -31,6 +32,6 @@
     </div>
     <div class="box"> 
         <img src="file_type_js_official_icon_130509.png" alt="js"><figcaption>JavaScript</figcaption>   
-</div>
+    </div>
 </body>
 </html>
