--- a/desafio 15 - Projeto Social/facebook.html
+++ b/desafio 15 - Projeto Social/facebook.html
@@ -8,6 +8,6 @@
     <link rel="stylesheet" href="social.css">
 </head>
 <body>
-    <img src="imagens/tela-facebook.jpg" alt="git-hub"><a href="https://www.facebook.com/patrick.rocha.948" target="_blank">ACESSE</a>
+    <img src="imagens/tela-facebook.jpg" alt="facebook"><a href="https://www.facebook.com/patrick.rocha.948" target="_blank">ACESSE</a>
 </body>
 </html>
